scripts/nullness/nullgtn/urla134d66615_fikr4n_itl_java_tgz-pJ8-example_ExampleJ8.txt
../nullgtn/urla134d66615_fikr4n_itl_java_tgz-pJ8-example_ExampleJ8/src/org/arabeyes/itl/hijri/HijriCalculator.java:73: error: [initialization.field.uninitialized] the default constructor does not initialize field units
        String units;
               ^
../nullgtn/urla134d66615_fikr4n_itl_java_tgz-pJ8-example_ExampleJ8/src/org/arabeyes/itl/prayer/Method.java:265: error: [initialization.fields.uninitialized] the constructor does not initialize fields: round, mathhab, extremeLatitude
    protected Method() {
              ^
2 errors
